# SSZ-METRIC_COMPLETE

./: .gitignore  01_MATHEMATICAL_FOUNDATIONS.md  02_PHYSICS_CONCEPTS.md  03_SCRIPT_ARCHITECTURE.md  04_FINDINGS_UNIFIED_RESULTS.md  05_FINDINGS_SSZ_METRIC_PURE.md  06_FINDINGS_G79_CYGNUS_TESTS.md  AUDIT_CANONICAL_SSZ_DOC_SOURCE.md  AUDIT_PURE_SSZ_REFACTOR.md  CAUTION_RESOLUTION_EXPLANATION.md  CHANGELOG.md  CHANGELOG_2PN_CALIBRATION.md  COMPARISON_AND_NEXT_STEPS.md  COMPARISON_README.md  COMPLETE_TENSOR_PACKAGE_README.md  EXACT_BENCHMARK_REPLAY_REPORT.md  EXTERNAL_DATA_VALIDATION_REPORT.md  EXTERNAL_METRIC_COUNTERTEST_REPORT.md  FAHRPLAN_50_PHASEN.md  FINAL_COMPARISON_AND_INTERPRETATION.py  FINAL_INTEGRITY_REPORT.md  FINAL_PROJECT_REPORT.md  FINAL_SESSION_SUMMARY.md  FINAL_SUMMARY_AND_REPORT.py  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LICENSE  LINO_SPEC_VERIFICATION.md  MASTER_README.md  OBSERVABLE_FORWARD_VALIDATION_REPORT.md  PIPELINE_README.md  PROJECT_STATISTICS.md  PROJECT_STATUS.md  PUSH_INSTRUCTIONS.md  QUICKSTART.md  README.md  REFACTOR_RESULT.md  REPRODUCIBILITY.md  SSZ_VALIDATION_SUMMARY_V2.md  (+25 more)
comparison/: gr_reference.py
docs/: FORWARD_ANTICIRCULAR_PROTOCOL.md  OBSERVABLE_LIMITATIONS.md  OBSERVABLE_METHOD_MATRIX.md  SCALE_DOMAIN_NEUTRON_STAR.md  SCALE_DOMAIN_PHASE_FREQUENCY.md  SCALE_DOMAIN_PHI_LATTICE.md  SCALE_DOMAIN_PLANCK_FINE_STRUCTURE.md  SCALE_DOMAIN_STRONG_FIELD.md  SEGMENTATION_PRINCIPLE.md  SPECIFICATION.md  SSZ_DOCUMENTATION_TRACEABILITY.md  SSZ_USECASE_MATRIX.md
examples/: README_PHI_SPIRAL.md  basic_usage.py  demo_phi_spiral.py  quickstart.py
external_validation/: EXTERNAL_VALIDATION_PROTOCOL.md  FETCHING_NICER_ALMA.md  data_manifest.example.json
legacy/: PROJECT_STATUS_legacy.md  README_COMPLETE_legacy.md  README_legacy.md  metric_kerr_legacy.py  phi_spiral_legacy.py  sszviz.py
legacy_tests/: README.md  (+8 more)
(+154 files in other folders)
