[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssz-metric-pure"
version = "1.1.0"
description = "Canonical pure SSZ metric research framework derived from the segment density field Xi."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "ANTI-CAPITALIST SOFTWARE LICENSE v1.4"}
authors = [
    {name = "Carmen Wrede"},
    {name = "Lino Casu"}
]
keywords = ["physics", "relativity", "black-holes", "spacetime", "golden-ratio", "ssz", "geodesics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
]
viz = [
    "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/error-wtf/ssz-metric-pure"
Repository = "https://github.com/error-wtf/ssz-metric-pure"
Documentation = "https://github.com/error-wtf/ssz-metric-pure/blob/main/docs"
"Bug Tracker" = "https://github.com/error-wtf/ssz-metric-pure/issues"

[tool.setuptools]
packages = ["ssz_metric_pure"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short -s"
norecursedirs = ["legacy_tests", "comparison", "legacy", "docs", ".venv"]
